fix: update line-height for subtitle in formacao section to improve readability

--- a/css/formacao.css
+++ b/css/formacao.css
@@ -30,7 +30,7 @@
   max-width: 1ch; 
   word-break: break-all;
   text-align: center;
-  line-height: 1;
+  line-height: 1.4; 
   font-size: 6rem; 
   margin: 0 auto; 
 }
